fixed image alignment issue

--- a/gtrgtr/static/style.css
+++ b/gtrgtr/static/style.css
@@ -46,6 +46,8 @@ html {
 .guitar-box {
   width: 25vw;
   height: auto;
+  display: flex;
+  justify-content: center;
 }
 
 .guitar-image {
